# so-i-24-chp2-FedericaMayorga01-public

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  Makefile  README.md  brief.md  config.json
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/workflows/: QAWorkflow.yml
include/: colors.h  commands.h  config.h  executions.h  monitor.h  shell.h  shell_hooks.h
lib/: commands.txt
lib/unity/: unity.c  unity.h  unity_internals.h
src/: commands.c  executions.c  main.c  monitor.c  shell.c  shell_hooks.c
test/: test_commands.c
tests/: CMakeLists.txt  test_commands.c  test_shell.c
